# squirrel-game

./: CMakeLists.txt  LICENSE  README.md  algo.txt  facedetect_extra.cpp  frutinha.cpp  main
sources/: a.out  facedetect_extra.cpp  frutinha.cpp  frutinha.h  main
